geoffrey forum fixes, aligning question form and search, updating filters automatically

--- a/src/main/webapp/styles/forum-style.css
+++ b/src/main/webapp/styles/forum-style.css
@@ -42,6 +42,16 @@ iframe {
   width: 120%;
 }
 
+.form-cell-left {
+  width: 30%;
+  text-align: right;
+}
+
+.form-cell-right {
+  width: 70%;
+  text-align: left;
+}
+
 /* Formatting for button types */
 
 .button {
@@ -91,11 +101,26 @@ label {
 #search {
   justify-content: center;
   padding: 1%;
+  margin: 1%;
+  align-items: baseline;
 }
 
 #search-button {
   border-radius: 5px;
-  height: 100%;
+  height: 50px;
+}
+
+#search h2,
+#search-input,
+#search-button {
+  padding-top: auto;
+  padding-bottom: 0;
+  margin-top: auto;
+  margin-bottom: 0;
+}
+
+#search-input {
+  height: 50px;
 }
 
 #filters {
